content/kapacitor/v1.0/nodes/eval_node.md
---
title: EvalNode
note: Auto generated by tickdoc

menu:
  kapacitor_1_0:
    name: Eval
    identifier: eval_node
    weight: 70
    parent: nodes
---

Evaluates expressions on each data point it receives. 
A list of expressions may be provided and will be evaluated in the order they are given. 
The results of expressions are available to later expressions in the list. 
See the property [EvalNode.As](/kapacitor/v1.0/nodes/eval_node/#as) for details on how to reference the results. 

Example: 


```javascript
    stream
        |eval(lambda: "error_count" / "total_count")
          .as('error_percent')
```

The above example will add a new field `error_percent` to each 
data point with the result of `error_count / total_count` where 
`error_count` and `total_count` are existing fields on the data point. 

Available Statistics: 

* eval_errors -- number of errors evaluating any expressions. 



Index
-----

### Properties

-	[As](/kapacitor/v1.0/nodes/eval_node/#as)
-	[Keep](/kapacitor/v1.0/nodes/eval_node/#keep)
-	[Quiet](/kapacitor/v1.0/nodes/eval_node/#quiet)
-	[Tags](/kapacitor/v1.0/nodes/eval_node/#tags)

### Chaining Methods

-	[Alert](/kapacitor/v1.0/nodes/eval_node/#alert)
-	[Bottom](/kapacitor/v1.0/nodes/eval_node/#bottom)
-	[Combine](/kapacitor/v1.0/nodes/eval_node/#combine)
-	[Count](/kapacitor/v1.0/nodes/eval_node/#count)
-	[Deadman](/kapacitor/v1.0/nodes/eval_node/#deadman)
-	[Default](/kapacitor/v1.0/nodes/eval_node/#default)
-	[Delete](/kapacitor/v1.0/nodes/eval_node/#delete)
-	[Derivative](/kapacitor/v1.0/nodes/eval_node/#derivative)
-	[Difference](/kapacitor/v1.0/nodes/eval_node/#difference)
-	[Distinct](/kapacitor/v1.0/nodes/eval_node/#distinct)
-	[Elapsed](/kapacitor/v1.0/nodes/eval_node/#elapsed)
-	[Eval](/kapacitor/v1.0/nodes/eval_node/#eval)
-	[First](/kapacitor/v1.0/nodes/eval_node/#first)
-	[Flatten](/kapacitor/v1.0/nodes/eval_node/#flatten)
-	[GroupBy](/kapacitor/v1.0/nodes/eval_node/#groupby)
-	[HoltWinters](/kapacitor/v1.0/nodes/eval_node/#holtwinters)
-	[HoltWintersWithFit](/kapacitor/v1.0/nodes/eval_node/#holtwinterswithfit)
-	[HttpOut](/kapacitor/v1.0/nodes/eval_node/#httpout)
-	[InfluxDBOut](/kapacitor/v1.0/nodes/eval_node/#influxdbout)
-	[Join](/kapacitor/v1.0/nodes/eval_node/#join)
-	[Last](/kapacitor/v1.0/nodes/eval_node/#last)
-	[Log](/kapacitor/v1.0/nodes/eval_node/#log)
-	[Max](/kapacitor/v1.0/nodes/eval_node/#max)
-	[Mean](/kapacitor/v1.0/nodes/eval_node/#mean)
-	[Median](/kapacitor/v1.0/nodes/eval_node/#median)
-	[Min](/kapacitor/v1.0/nodes/eval_node/#min)
-	[Mode](/kapacitor/v1.0/nodes/eval_node/#mode)
-	[MovingAverage](/kapacitor/v1.0/nodes/eval_node/#movingaverage)
-	[Percentile](/kapacitor/v1.0/nodes/eval_node/#percentile)
-	[Sample](/kapacitor/v1.0/nodes/eval_node/#sample)
-	[Shift](/kapacitor/v1.0/nodes/eval_node/#shift)
-	[Spread](/kapacitor/v1.0/nodes/eval_node/#spread)
-	[Stats](/kapacitor/v1.0/nodes/eval_node/#stats)
-	[Stddev](/kapacitor/v1.0/nodes/eval_node/#stddev)
-	[Sum](/kapacitor/v1.0/nodes/eval_node/#sum)
-	[Top](/kapacitor/v1.0/nodes/eval_node/#top)
-	[Union](/kapacitor/v1.0/nodes/eval_node/#union)
-	[Where](/kapacitor/v1.0/nodes/eval_node/#where)
-	[Window](/kapacitor/v1.0/nodes/eval_node/#window)

Properties
----------

Property methods modify state on the calling node.
They do not add another node to the pipeline, and always return a reference to the calling node.
Property methods are marked using the `.` operator.


### As

List of names for each expression. 
The expressions are evaluated in order. The result 
of an expression may be referenced by later expressions 
via the name provided. 

Example: 


```javascript
    stream
        |eval(lambda: "value" * "value", lambda: 1.0 / "value2")
            .as('value2', 'inv_value2')
```

The above example calculates two fields from the value and names them 
`value2` and `inv_value2` respectively. 



```javascript
node.as(names ...string)
```


### Keep

If called the existing fields will be preserved in addition 
to the new fields being set. 
If not called then only new fields are preserved. (Tags are 
always preserved regardless how `keep` is used.) 

Optionally, intermediate values can be discarded 
by passing a list of field names to be kept. 
Only fields in the list will be retained, the rest will be discarded. 
If no list is given then all fields are retained. 

Example: 


```javascript
    stream
        |eval(lambda: "value" * "value", lambda: 1.0 / "value2")
            .as('value2', 'inv_value2')
            .keep('value', 'inv_value2')
```

In the above example the original field `value` is preserved. 
The new field `value2` is calculated and used in evaluating 
`inv_value2` but is discarded before the point is sent on to child nodes. 
The resulting point has only two fields: `value` and `inv_value2`. 



```javascript
node.keep(fields ...string)
```


### Quiet

Suppress errors during evaluation. 


```javascript
node.quiet()
```


### Tags

Convert the result of an expression into a tag. 
The result must be a string. 
Use the `string()` expression function to convert types. 


Example: 


```javascript
    stream
        |eval(lambda: string(floor("value" / 10.0)))
            .as('value_bucket')
            .tags('value_bucket')
```

The above example calculates an expression from the field `value`, casts it as a string, and names it `value_bucket`. 
The `value_bucket` expression is then converted from a field on the point to a tag `value_bucket` on the point. 

Example: 


```javascript
    stream
        |eval(lambda: string(floor("value" / 10.0)))
            .as('value_bucket')
            .tags('value_bucket')
            .keep('value') // keep the original field `value` as well
```

The above example calculates an expression from the field `value`, casts it as a string, and names it `value_bucket`. 
The `value_bucket` expression is then converted from a field on the point to a tag `value_bucket` on the point. 
The `keep` property preserves the original field `value`. 
Tags are always kept since creating a tag implies you want to keep it. 



```javascript
node.tags(names ...string)
```


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node.
They do not modify the calling node.
Chaining methods are marked using the `|` operator.


### Alert

Create an alert node, which can trigger alerts. 


```javascript
node|alert()
```

Returns: [AlertNode](/kapacitor/v1.0/nodes/alert_node/)


### Bottom

Select the bottom `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|bottom(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Combine

Combine this node with itself. The data are combined on timestamp. 


```javascript
node|combine(expressions ...ast.LambdaNode)
```

Returns: [CombineNode](/kapacitor/v1.0/nodes/combine_node/)


### Count

Count the number of points. 


```javascript
node|count(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Deadman

Helper function for creating an alert on low throughput, a.k.a. deadman&#39;s switch. 

- Threshold -- trigger alert if throughput drops below threshold in points/interval. 
- Interval -- how often to check the throughput. 
- Expressions -- optional list of expressions to also evaluate. Useful for time of day alerting. 

Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
    //Do normal processing of data
    data...
```

The above is equivalent to this 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |stats(10s)
            .align()
        |derivative('emitted')
            .unit(10s)
            .nonNegative()
        |alert()
            .id('node \'stream0\' in task \'{{ .TaskName }}\'')
            .message('{{ .ID }} is {{ if eq .Level "OK" }}alive{{ else }}dead{{ end }}: {{ index .Fields "emitted" | printf "%0.3f" }} points/10s.')
            .crit(lambda: "emitted" <= 100.0)
    //Do normal processing of data
    data...
```

The `id` and `message` alert properties can be configured globally via the &#39;deadman&#39; configuration section. 

Since the [AlertNode](/kapacitor/v1.0/nodes/alert_node/) is the last piece it can be further modified as usual. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
            .slack()
            .channel('#dead_tasks')
    //Do normal processing of data
    data...
```

You can specify additional lambda expressions to further constrain when the deadman&#39;s switch is triggered. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    // Only trigger the alert if the time of day is between 8am-5pm.
    data
        |deadman(100.0, 10s, lambda: hour("time") >= 8 AND hour("time") <= 17)
    //Do normal processing of data
    data...
```



```javascript
node|deadman(threshold float64, interval time.Duration, expr ...ast.LambdaNode)
```

Returns: [AlertNode](/kapacitor/v1.0/nodes/alert_node/)


### Default

Create a node that can set defaults for missing tags or fields. 


```javascript
node|default()
```

Returns: [DefaultNode](/kapacitor/v1.0/nodes/default_node/)


### Delete

Create a node that can delete tags or fields. 


```javascript
node|delete()
```

Returns: [DeleteNode](/kapacitor/v1.0/nodes/delete_node/)


### Derivative

Create a new node that computes the derivative of adjacent points. 


```javascript
node|derivative(field string)
```

Returns: [DerivativeNode](/kapacitor/v1.0/nodes/derivative_node/)


### Difference

Compute the difference between points independent of elapsed time. 


```javascript
node|difference(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Distinct

Produce batch of only the distinct points. 


```javascript
node|distinct(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Elapsed

Compute the elapsed time between points 


```javascript
node|elapsed(field string, unit time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Eval

Create an eval node that will evaluate the given transformation function to each data point. 
A list of expressions may be provided and will be evaluated in the order they are given. 
The results are available to later expressions. 


```javascript
node|eval(expressions ...ast.LambdaNode)
```

Returns: [EvalNode](/kapacitor/v1.0/nodes/eval_node/)


### First

Select the first point. 


```javascript
node|first(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Flatten

Flatten points with similar times into a single point. 


```javascript
node|flatten()
```

Returns: [FlattenNode](/kapacitor/v1.0/nodes/flatten_node/)


### GroupBy

Group the data by a set of tags. 

Can pass literal * to group by all dimensions. 
Example: 


```javascript
    |groupBy(*)
```



```javascript
node|groupBy(tag ...interface{})
```

Returns: [GroupByNode](/kapacitor/v1.0/nodes/group_by_node/)


### HoltWinters

Compute the holt-winters forecast of a data set. 


```javascript
node|holtWinters(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### HoltWintersWithFit

Compute the holt-winters forecast of a data set. 
This method also outputs all the points used to fit the data in addition to the forecasted data. 


```javascript
node|holtWintersWithFit(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### HttpOut

Create an HTTP output node that caches the most recent data it has received. 
The cached data are available at the given endpoint. 
The endpoint is the relative path from the API endpoint of the running task. 
For example, if the task endpoint is at `/kapacitor/v1/tasks/&lt;task_id&gt;` and endpoint is 
`top10`, then the data can be requested from `/kapacitor/v1/tasks/&lt;task_id&gt;/top10`. 


```javascript
node|httpOut(endpoint string)
```

Returns: [HTTPOutNode](/kapacitor/v1.0/nodes/http_out_node/)


### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB. 


```javascript
node|influxDBOut()
```

Returns: [InfluxDBOutNode](/kapacitor/v1.0/nodes/influx_d_b_out_node/)


### Join

Join this node with other nodes. The data are joined on timestamp. 


```javascript
node|join(others ...Node)
```

Returns: [JoinNode](/kapacitor/v1.0/nodes/join_node/)


### Last

Select the last point. 


```javascript
node|last(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Log

Create a node that logs all data it receives. 


```javascript
node|log()
```

Returns: [LogNode](/kapacitor/v1.0/nodes/log_node/)


### Max

Select the maximum point. 


```javascript
node|max(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Mean

Compute the mean of the data. 


```javascript
node|mean(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Median

Compute the median of the data. Note, this method is not a selector, 
if you want the median point use `.percentile(field, 50.0)`. 


```javascript
node|median(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Min

Select the minimum point. 


```javascript
node|min(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Mode

Compute the mode of the data. 


```javascript
node|mode(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### MovingAverage

Compute a moving average of the last window points. 
No points are emitted until the window is full. 


```javascript
node|movingAverage(field string, window int64)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Percentile

Select a point at the given percentile. This is a selector function, no interpolation between points is performed. 


```javascript
node|percentile(field string, percentile float64)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Sample

Create a new node that samples the incoming points or batches. 

One point will be emitted every count or duration specified. 


```javascript
node|sample(rate interface{})
```

Returns: [SampleNode](/kapacitor/v1.0/nodes/sample_node/)


### Shift

Create a new node that shifts the incoming points or batches in time. 


```javascript
node|shift(shift time.Duration)
```

Returns: [ShiftNode](/kapacitor/v1.0/nodes/shift_node/)


### Spread

Compute the difference between `min` and `max` points. 


```javascript
node|spread(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Stats

Create a new stream of data that contains the internal statistics of the node. 
The interval represents how often to emit the statistics based on real time. 
This means the interval time is independent of the times of the data points the source node is receiving. 


```javascript
node|stats(interval time.Duration)
```

Returns: [StatsNode](/kapacitor/v1.0/nodes/stats_node/)


### Stddev

Compute the standard deviation. 


```javascript
node|stddev(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Sum

Compute the sum of all values. 


```javascript
node|sum(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Top

Select the top `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|top(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Union

Perform the union of this node and all other given nodes. 


```javascript
node|union(node ...Node)
```

Returns: [UnionNode](/kapacitor/v1.0/nodes/union_node/)


### Where

Create a new node that filters the data stream by a given expression. 


```javascript
node|where(expression ast.LambdaNode)
```

Returns: [WhereNode](/kapacitor/v1.0/nodes/where_node/)


### Window

Create a new node that windows the stream by time. 

NOTE: Window can only be applied to stream edges. 


```javascript
node|window()
```

Returns: [WindowNode](/kapacitor/v1.0/nodes/window_node/)

